update placeholders
